--- a/blog.liquid
+++ b/blog.liquid
@@ -1,68 +1,41 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-
-    <link rel="shortcut icon" href="/assets/logo.svg" type="image/x-icon">
-
-    <meta name="description" content="Community telegram sulla coltivazione della cannabis.">
-    <meta property="og:title" content="Canapa Coltivazione">
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="/blog/">
-    <meta property="og:image" content="/assets/avatar.png">
-    <meta property="og:description" content="Community telegram sulla coltivazione della cannabis.">
-    <meta name="robots" content="noindex">
-
-    <link rel="preload" href="/assets/Graphik-Regular-Web.woff2" as="font" type="font/woff2" crossorigin />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="/assets/main.js" defer></script>
+    {% include 'head.html' %}
     <link rel="stylesheet" href="/styles/about.css">
-</head>
-
-<body>
-    <script>
-        const theme = localStorage.getItem('theme');
-        if (theme === 'dark') {
-            document.body.classList.add('dark');
-        }
-    </script>
-    <script>
-        const onLangChange = (toLang, pageUrl) => {
-
-            if (pageUrl.includes("en"))
-                pageUrl = pageUrl.split("en").slice(1)
-
-            if (toLang === "en") {
-                window.location.href = new URL(window.location.protocol + "//" + window.location.host + "/en" + pageUrl);
-            }
-            else {
-                window.location.href = new URL(window.location.protocol + "//" + window.location.host + pageUrl);
-            }
-        }
-    </script>
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    
     <header class="page-header">
         <div class="container">
             <a href="javascript:toggleSidebar()" class="icon-btn" title="Menu" id="menu_btn"><svg class="icon">
                     <use href="/assets/bars.svg#content" />
                 </svg></a>
-            <a href="/">
-                <img width="48" height="48" class="logo" src="/assets/logo.svg" alt="">
-            </a>
-
+            <img width="48" height="48" class="logo" src="/assets/logo.svg" alt="">
             <nav>
+
+                <a href="/" class="menu-item">Home</a>
+                <a href="/about" class="menu-item">About</a>
+                <a href="/contact" class="menu-item">Contact</a>
+                <a href="/blog" class="menu-item">Blog</a>
+
             </nav>
-            <a href="#"> 404</a>
-            <a href="#"> About </a>
-            <a id="theme_switch" class="icon-btn" href="javascript:toggleTheme()" title="Change theme"><svg
-                    class="icon">
+        
+            
+                    <input type="search" id="searchbar" class="searchbar" placeholder="Search" />
+                <a href="javascript:toggleSearchBar()">
+                    <i class="fa fa-search fa-lg"></i>
+                </a>
+                <a id="theme_switch" class="icon-btn" href="javascript:toggleTheme()" title="Change theme"><svg class="icon">
                     <use href="/assets/moon.svg#content" />
                 </svg></a>
+               
 
         </div>
     </header>
+
+<body>
+
     <div class="main">
 
         {% for post in collections.posts reversed %}
@@ -70,15 +43,20 @@
         <div class="cont">
             <div class="lef">
 
+                <div class="desc">
                 <a id="title" href="{{ post.url }}">
                     <h4> {{ post.data.title }} </h4>
                 </a>
                 <p>{{ post.data.snippet }}</p>
+                </div>
                 <div class="pop">
+                   <div class="tag__con"> 
                     {% for tag in post.data.tags %}
-                    <p><a href="/tags/{{tag}}" class="tag">#{{tag}}</a></p>
+                        <p><a href="/tags/{{tag}}" class="tag">#{{tag}}</a></p>
                     {% endfor %}
-                    <p>{{ post.date | date: '%B %e, %Y' }}</p>
+                   </div> 
+                    
+                    <p class="date">{{ post.date | date: '%B %e, %Y' }}</p>
                 </div>
 
             </div>
