--- a/styles/blogpost.scss
+++ b/styles/blogpost.scss
@@ -1,77 +1,24 @@
-@import "global";
+@import 'global';
 
 body {
-  background-color: var(--bg);
-  color: var(--fg);
-  display: flex;
-  flex-direction: column;
+    background-color: var(--bg);
+    color: var(--fg);
+    display: flex;
+    flex-direction: column;
 }
 
-.blog-container {
-  display: flex;
-  flex-direction: column;
-  margin: 1rem;
-  flex: 1;
-}
-
-header {
-}
-
-.content-container {
-  flex: 1;
-
-  main {
+main {
     flex: 1;
-    .posts {
-      width: 60ch;
-      .post {
-        &-date {
-          font-size: 12px;
-          line-height: 20px;
-          color: var(--date-color);
-        }
-
-        &-title {
-          font-size: 32px;
-          line-height: 39px;
-          a {
-            text-decoration: none;
-            &:hover {
-              text-decoration: underline;
-            }
-          }
-        }
-      }
-    }
-  }
 }
 
-@media (max-width: $breakpoint-md) {
-  header {
-    text-align: center;
-    .title {
-      font-size: 48px;
+.content {
+    padding: 2rem;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 90ch;
+    img{
+      border-radius: 8px;
+      margin: 0.5rem 0 2rem 0;
     }
-  }
-  .content-container {
-    flex-direction: column-reverse;
-    align-items: center;
-    margin-top: 0;
-    main {
-      margin-top: 2em;
-      .posts {
-        width: 80vw;
-      }
-    }
-  }
-}
-
-@media (max-width: $breakpoint-sm) {
-  .content-container {
-    main {
-      .posts {
-        width: 85vw;
-      }
-    }
-  }
 }
