--- a/styles/about.scss
+++ b/styles/about.scss
@@ -1,330 +1,35 @@
-@import 'global';
+@import "global";
 
 body {
-	background-color: var(--bg);
-	color: var(--fg);
-	display: flex;
-	flex-direction: column;
+  background-color: var(--bg);
+  color: var(--fg);
+  display: flex;
+  flex-direction: column;
 }
 
-// main {
-// 	flex: 1;
-// }
+main {
+  flex: 1;
+}
 
 .about {
-	max-width: 1100px;
-	margin: 0 auto;
-	padding: 0 1rem;
+  max-width: 1100px;
+  margin: 32px auto;
+  padding: 0 1rem;
 
-	@media (max-width: $breakpoint-md) {
-		max-width: 800px;
-		padding: 0 2rem;
-	}
+  @media (max-width: $breakpoint-md) {
+    max-width: 800px;
+    padding: 0 2rem;
+  }
 
-	@media (max-width: $breakpoint-sm) {
-		// max-width: 480px;
-	}
+  @media (max-width: $breakpoint-sm) {
+    max-width: 480px;
+  }
 
-	p {
-		// font-size: 1.15em;
-	}
-}
-header{
-	width: 100% !important;
-}
-.page-header{
-	width: 100%!important;
-	// max-width: 1000px; 
-	// margin: 0 auto !important; 
-	// color: var(--date-color);
-	// width: 100%;
-	// padding: 0px !important;
-}
+  p {
+    font-size: 1.15em;
+  }
 
-.searchbar {
-	border-radius: 5px;
-	padding: 8px;
-	border-width: 0px;
-	color: var(--date-color);
-	background-color: #d9d9d9;
-	// margin-left: 92px;
-	// margin-right: 12px;
+  h2 {
+    margin-top: 16px;
+  }
 }
-.container {
-	padding: 0px 72px;
-}
-.bar{
-	display: inline;
-	color: var(--date-color);
-}
-.main{
-	
-	max-width: 850px; 
-	margin: 0 auto !important; 
-	float: none !important; 
-	padding: 0px 40px;
-	color: var(--date-color);
-}
-
-.cont{
-	display: grid;
-	// padding: 0px 200px;
-	grid-template-columns: 2fr 1fr;
-	gap: 25px;
-	margin-bottom: 30px;
-	.lef{
-		display: flex;
-		flex-direction: column;
-		gap: 20px;
-		justify-content: space-between;
-		a{
-			h4{
-				font-size: 24px;
-				font-weight: 700;
-				margin-top: 20px;
-	
-			}
-		}
-		a:hover{
-			color: var(--hov);
-			text-decoration: underline;
-		}
-		
-		p{
-			font-size: 14px;
-			font-weight: 400;
-			margin-bottom: 0px;
-		}
-		.pop{
-			display: flex;
-			justify-content: space-between;
-			align-items: center;
-			
-
-			.tag__con{
-				display: flex;
-				overflow-x: auto;
-				scrollbar-width: none;
-				-ms-overflow-style: none; 
-  				scrollbar-width: none;
-				gap: 20px;
-				
-				p:nth-child(1){
-					padding: 4px 6px;
-					border-radius: 8px;
-					color: white;
-					background-color: brown;
-				}
-				p:nth-child(2){
-					padding: 4px 6px;
-					border-radius: 8px;
-					color: white;
-					background-color: rgb(42, 71, 165);
-				}
-				p:nth-child(3){
-					padding: 4px 6px;
-					border-radius: 8px;
-					color: white;
-					background-color: rgb(244, 18, 198);
-				}
-				p:nth-child(4){
-					padding: 4px 6px;
-					border-radius: 8px;
-					color: white;
-					background-color: rgb(232, 121, 3);
-				}
-			}
-			
-			
-	}
-}
-.righ{
-				background-size: cover;
-				margin-top: 20px;
-				min-height: 200px;
-				width: 100%;
-}
-.hr{
-	width: 100%;
-	margin-top: 30px;
-}
-}
-hr{
-	border-top: 1px dashed var(--fg);
-	width: 100%;
-	// margin-top: 20px;
-}
-.cont:nth-child(1){
-	.pop{
-		p:nth-child(1){
-			background-color: rgb(82, 19, 184);
-		}
-	}
-}
-
-.cont:nth-child(3){
-	.pop{
-		p:nth-child(1){
-			background-color: rgb(15, 11, 249);
-		}
-	}
-}
-
-
-
-
-
-
-@media (max-width: $breakpoint-md) {
-	.pop{
-		// flex-wrap: wrap;
-	}
-	.searchbar {
-		margin-left: 50px;
-	}
-	.cont{
-		.tag__con{
-			max-width: 60%;
-			overflow: auto;
-		}
-		.tag__con::-webkit-scrollbar {
-			display: none;
-		}
-		gap: 10px;
-		.lef{
-			gap: 10px;
-			h4{
-				font-size: 24px;
-
-			}
-			p{
-				font-size: 18px;
-			}
-		}
-		.righ{
-			margin: 40px 0px;
-		}
-
-	}
-}
-
-
-
-
-
-
-@media (max-width: $breakpoint-sm) {
-.container{
-	padding: 0px 20px;
-	min-width: 100% !important;
-}
-#searchbar {
-	width: 50% !important;
-	margin-left: 40px;
-}
-.inp{
-	display: flex;
-	width: 100%;
-}
-.searchbar,
-	.searching {
-		display: none;
-	}
-.cont{
-	display: flex;
-	gap: 2px !important;
-	flex-direction: column-reverse;
-	margin-bottom: 0px !important;
-	.lef{
-		display: flex;
-		flex-direction: column;
-		gap: 1px;
-		margin: 0px !important;
-		a{
-			h4{
-				font-weight: 700;
-				font-size: 16px;
-				margin-top: 15px !important;
-			}
-		}
-		.desc{
-			p{
-				display: none;
-			}
-		}
-		p{
-			font-size: 12px !important;
-			margin-bottom: 0px !important;
-		}
-		.pop{
-			display: flex;
-			justify-content: space-between;
-			align-items: center;
-			
-			// gap: 10px;
-			.tag__con{
-				overflow: auto;
-				max-width: 60%;
-				gap: 2px;
-				display: flex;
-				scrollbar-width: none;
-				-ms-overflow-style: none; 
-  				scrollbar-width: none;
-			}
-			p{
-				font-size: 10px;
-				padding: 3px 6px;
-				// color: white;
-				border-radius: 4px;
-			}
-			// p:nth-child(1){
-				
-			// }
-			
-		}
-		
-	}
-	.righ{
-					background-size: cover;
-					margin: 0px 0px !important;
-					min-height: 200px;
-					width: 100% !important;
-	}
-}
-
-.page-header {
-	.logo {
-		display: none;
-	}
-}
-
-	
-}
-@media (max-width: $breakpoint-xs) {
-	.main{
-		max-width: 100% !important;
-	}
-.date{
-	font-size: 10px;
-}
-.pop{
-	max-width: 100% !important;
-	.tag__con{
-		overflow: auto;
-		overflow: auto;
-		max-width: 50%;
-		gap: 2px;
-		display: flex;
-		scrollbar-width: none;
-		-ms-overflow-style: none; 
-		  scrollbar-width: none;
-	}
-}
-#searchbar {
-	width: 60px !important;
-}
-.righ{
-	max-width: 100% !important;
-}
-}
-
