--- a/styles/blog.scss
+++ b/styles/blog.scss
@@ -1,587 +1,73 @@
 @import 'global';
 
 body {
-	background-color: var(--bg);
-	color: var(--fg);
-	display: flex;
-	flex-direction: column;
-}
-.container {
-	padding: 0px 72px;
+    background-color: var(--bg);
+    color: var(--fg);
+    display: flex;
+    flex-direction: column;
 }
 
-.blog-container {
-	display: flex;
-	flex-direction: column;
-	flex: 1;
-}
+.blog-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 1rem;
 
-.title {
-	margin: 2rem;
-	font-size: 24px;
-	font-weight: normal;
-}
+    .title {
+        align-self: flex-start;
+    }
+    .post {
+        display: flex;
+        gap: 2rem;
+        flex-direction: row;
+        @media (max-width: $breakpoint-sm) {
+            flex-direction: column;
+            align-items: center;
+            gap: 0.5rem;
+        }
+        .left {
+            max-width: 200px;
+            @media (max-width: $breakpoint-sm) {
+                max-width: 100%;
+            }
+            display: flex;
+            align-items: center;
+            flex-direction: column;
+            img {
+                aspect-ratio: 1/1;
+            }
+            @media (max-width: $breakpoint-sm) {
+              img {
+                height: 90%;
+              }
+            }
+        }
+        .right {
+            flex: 1;
+            .tags {
+                margin-top: 0.5rem;
+                display: flex;
+                gap: 2px;
+                flex-wrap: wrap;
+            }
+        }
+        .tag {
+            border: 1px solid wheat;
+            padding: 4px;
+            border-radius: 2px;
+            background-color: brown;
+            color: wheat;
+        }
+        .tag:nth-child(2n) {
+            background-color: darkslateblue;
+            color: wheat;
+        }
+    }
 
-.content-container {
-	flex: 1;
+    @media (max-width: $breakpoint-md) {
+    }
 
-	main {
-		margin-left: 2rem;
-		.posts {
-			width: 70vw;
-			.post {
-				&-date {
-					color: var(--date-color);
-				}
-
-				&-title {
-					font-size: 32px;
-					line-height: 39px;
-					margin: unset;
-					overflow: hidden;
-					a {
-						display: -webkit-box;
-						-webkit-line-clamp: 2;
-						-webkit-box-orient: vertical;
-						text-decoration: none;
-						&:hover {
-							text-decoration: underline;
-						}
-					}
-				}
-
-				&-snippet {
-					display: -webkit-box;
-					-webkit-line-clamp: 3;
-					-webkit-box-orient: vertical;
-					overflow: hidden;
-				}
-
-				&-header {
-					display: grid;
-					grid-template-columns: 200px 1fr;
-					gap: 2rem;
-					&-right {
-						display: flex;
-						flex-direction: column;
-						justify-content: space-evenly;
-					}
-				}
-
-				&-footer {
-					display: flex;
-					align-items: center;
-					justify-content: space-between;
-					margin-top: 1rem;
-				}
-			}
-		}
-	}
-}
-
-//Jake styles goes here
-.container {
-	// padding: 0px 72px;
-	max-width: 100%;
-}
-.page-header{
-	.logo{
-		margin: 0px;
-	}
-}
-.searching {
-	height: 30px;
-	width: 40px;
-	margin-left: 5px;
-	color: var(--date-color) !important;
-}
-// #searchbar{
-//   display: none;
-//   transition: display 5s;
-// }
-.desktop {
-	display: flex;
-	flex-direction: column;
-}
-.searchbar {
-	border-radius: 5px;
-	padding: 8px;
-	border-width: 0px;
-	color: var(--date-color);
-	background-color: #d9d9d9;
-	// margin-left: 92px;
-	// margin-right: 12px;
-}
-.detail__main {
-	color: var(--date-color);
-	padding: 0px 72px;
-	display: grid;
-	background-color: var(--bg);
-	.page_title {
-		display: flex;
-		justify-content: space-between;
-		align-items: center;
-		h4 {
-			font-size: 38px;
-			color: var(--sharp-color);
-		}
-	}
-	.description__column {
-		display: flex;
-		width: 100%;
-		gap: 24px;
-		height: 15px;
-		align-items: center;
-		padding: 10px 0px;
-		margin-top: 48px;
-		margin-bottom: 24px;
-		img {
-			padding: 5px;
-			// border: 1px solid white;
-			background-color: white;
-		}
-		h6 {
-			font-size: 26px;
-		}
-		.profile {
-			height: 48px;
-			width: 48px;
-			border-radius: 50%;
-			color: var(--date-color);
-			background-color: var(--bg);
-		}
-	}
-	.mimage {
-		width: 100%;
-		height: 400px;
-		margin-top: 15px;
-		background-image: url('../assets/blogImages/banner.svg');
-		background-repeat: no-repeat;
-		background-size: cover;
-		background-position: center bottom;
-	}
-	.body__text {
-		margin-top: 40px;
-		p {
-			font-size: 18px;
-			color: var(--sharp-color);
-		}
-	}
-	.tags__cont {
-		display: flex;
-		gap: 40px;
-		margin-top: 56px;
-		color: var(--bg);
-		font-size: 20px;
-		.tag {
-			padding: 10px 32px;
-			border-radius: 8px;
-			color: white;
-			// width: 7rem;
-			text-align: center;
-			font-size: 28px;
-			font-weight: 500;
-		}
-	}
-	.tags__cont > :first-child {
-		background-color: #5a8622;
-	}
-	.tags__cont > :nth-child(3) {
-		background-color: #046a71;
-	}
-	.tags__cont > :nth-child(2) {
-		background-color: #9d6666;
-	}
-	.view_all {
-		// padding: 30px 0px 0px 0px;
-		display: flex;
-		flex-direction: column;
-		a {
-			font-size: 28px;
-			color: #52b641;
-			margin-top: 72px;
-			margin-bottom: 79px;
-		}
-		.hr {
-			// border: 1px solid var(--date-color);
-			width: 100%;
-			color: #8d7d7d;
-		}
-	}
-	.corelated__articles {
-		display: flex;
-		flex-direction: column;
-		color: var(--sharp-color);
-		h4 {
-			font-size: 38px;
-			font-weight: 400;
-		}
-		hr {
-			width: 100%;
-		}
-		.corelated__container {
-			display: flex;
-			flex-direction: column;
-      		margin-bottom: 20px;
-			.top {
-				display: grid;
-				grid-template-columns: 3fr 1fr;
-				.left {
-					display: flex;
-
-					flex-direction: column;
-					color: var(--sharp-color);
-					h5 {
-						font-weight: 700;
-						font-size: 26px;
-					}
-					p {
-						font-size: 18px;
-						color: var(--sharp-color);
-					}
-				}
-				.right {
-					background-image: url('/assets/blogImages/b-image.svg');
-					background-size: cover;
-					margin-top: 47px;
-					// margin-bottom: 30px;
-				}
-			}
-		}
-		.down {
-			display: flex;
-			justify-content: space-between;
-      align-items: center;
-			.corelated__tags {
-				display: flex;
-				gap: 48px;
-				p {
-					padding: 10px 32px;
-					border-radius: 8px;
-					background-color: #046a71;
-					color: white;
-					font-size: 18px;
-				}
-				p:nth-child(2) {
-					background-color: #850e87;
-				}
-			}
-			.date {
-				p {
-					font-size: 18px;
-				}
-			}
-		}
-	}
-}
-
-@media (max-width: $breakpoint-md) {
-	.container,
-	.detail__main {
-		padding: 0px 22px;
-	}
-
-	.corelated__container {
-		.top {
-			gap: 15px;
-			.left {
-				gap: 20px;
-				justify-content: space-around;
-				h5 {
-					font-size: 24px;
-				}
-				p {
-					font-size: 20px;
-				}
-			}
-			.right {
-				margin-bottom: 10px;
-			}
-		}
-		.down {
-			gap: 20px;
-			p {
-				// padding: 7px 15px;
-				font-size: 16px;
-				border-radius: 5px;
-			}
-		}
-	}
-	.searchbar {
-		margin-left: 50px;
-	}
-	.page_title h4 {
-		font-size: 24px !important;
-	}
-	.description__column {
-		h6 {
-			font-size: 16px !important;
-		}
-	}
-	.view_all {
-		a {
-			font-size: 16px !important;
-		}
-	}
-	.corelated__articles {
-		h4 {
-			font-size: 32px !important;
-		}
-	}
-	.corelated__container {
-		// margin: 20px 0px;
-		max-height: 300px;
-	}
-	.left {
-		.corelated__tags {
-			p {
-			}
-		}
-		h5 {
-			font-size: 32px !important;
-			justify-content: start !important;
-		}
-		p:nth-child(1) {
-			font-size: 24px;
-		}
-	}
-}
-
-@media (max-width: $breakpoint-sm) {
-	.tags__cont {
-		gap: 16px !important;
-		margin-top: 10px !important;
-
-		.tag {
-			padding: 4px 8px !important;
-			border-radius: 4px;
-			color: white;
-			text-align: center;
-			font-size: 12px !important;
-		}
-	}
-	.desktop {
-		display: none;
-	}
-
-
-	.pop{
-		.date{
-			color: red !important;
-		}
-	}
-
-	
-	#searchbar {
-		width: 50% !important;
-		margin-left: 40px;
-	}
-	.description__column{
-		margin-bottom: 0px !important;
-	}
-	.mimage{
-		margin-top: 0px !important;
-	}
-	.page_title h4 {
-		font-size: 21px !important;
-	}
-	.body__text {
-		margin-top: 20px !important;
-		p {
-			font-size: 16px !important;
-		}
-	}
-	.description__column {
-		gap: 5px !important;
-		margin-top: 10px !important;
-		margin-bottom: 22px !important;
-		h6 {
-			font-size: 12px !important;
-		}
-		.profile {
-			padding: 0px !important;
-			width: 36px !important;
-			height: 36px !important;
-			margin: 0px !important;
-		}
-	}
-	.searchbar,
-	.searching {
-		display: none;
-	}
-
-	.view_all {
-		a {
-			font-size: 18px !important;
-			margin-top: 23px !important;
-			margin-bottom: 32px !important;
-		}
-	}
-	.corelated__articles {
-		h4 {
-			font-size: 18px !important;
-			margin-top: 15px;
-		}
-	}
-	.detail__main {
-		padding: 0px 16px;
-		h4 {
-			font-size: 18px;
-		}
-	}
-	// .description__column {
-	// 	gap: 2px;
-	// 	padding: 3px 0px;
-		
-	// }
-	.container {
-		padding: 0px;
-	}
-	.corelated__container {
-		// grid-template-columns: 1.5fr 1fr !important;
-		margin-top: 0px !important;
-		min-height: 400px !important;
-		margin-bottom: 5px !important;
-		.top {
-      display: flex !important;
-			flex-direction: column-reverse !important;
-			.left {
-				// gap: 9px !important;
-				h5 {
-					font-size: 18px !important;
-					margin-top: 0px;
-					font-weight: 700;
-				}
-				p {
-          display: none;
-					font-size: 16px;
-					font-weight: 400;
-				}
-			}
-			.right {
-        // background-image: none !important;
-        // object-fit: cover;
-				margin-left: 0px;
-				margin-top: 0px !important;
-        min-height: 250px;
-			}
-		}
-		
-		.down {
-			.corelated__tags {
-				gap: 16px !important;
-				p {
-					padding: 4px 8px !important;
-					border-radius: 4px;
-					color: white;
-					text-align: center;
-					font-size: 12px !important;
-				}
-			}
-			// .date {
-			// 	p {
-			// 		font-size: 12px !important;
-					
-			// 	}
-			// }
-		}
-	}
-}
-@media (max-width: $breakpoint-xs) {
-	.down {
-		.corelated__tags {
-			gap: 10px !important;
-			p {
-				font-size: 10px;
-				padding: 2px 6px !important;
-				border-radius: 4px;
-			}
-		}
-	}
-	#searchbar {
-		width: 60px !important;
-	}
-}
-
-// @media (max-width: 490px) {
-//  .right{
-//   margin-bottom: 40px !important;
-//  }
-//  .tags__cont{
-//   gap: 5px !important;
-
-//  }
-
-// }
-@media (min-width: 640px) and (max-width: 770px) {
-	.corelated__container {
-		min-height: 400px;
-		.left {
-			gap: 20px !important;
-		}
-	}
-}
-@media (max-width: $breakpoint-md) {
-	.content-container main {
-		.posts {
-			width: 30ch;
-			.post {
-				&-title {
-					font-size: 16px;
-					line-height: 20px;
-				}
-				&-header {
-					display: grid;
-					grid-template-columns: 100px 1fr;
-					gap: 0.5rem;
-				}
-				&-footer {
-					flex-direction: column;
-					align-items: flex-start;
-				}
-			}
-		}
-	}
-}
-
-@media (max-width: $breakpoint-sm) {
-	.blog-image {
-		display: none;
-	}
-	.content-container main {
-		.posts {
-			width: 30ch;
-			.post {
-				&-title {
-					font-size: 20px;
-					line-height: 30px;
-				}
-				&-header {
-					grid-template-columns: 1fr;
-				}
-				&-date {
-					font-size: 11px;
-				}
-			}
-		}
-	}
-}
-
-.tag {
-	border: 1px solid transparent;
-	border-radius: 0.25rem;
-	color: #111;
-	background: #69caff;
-	display: inline-block;
-	font-size: 0.75rem;
-	font-weight: 700;
-	line-height: 1rem;
-	margin-bottom: 0.5rem;
-	margin-right: 0.5rem;
-	padding: 0.5rem 1rem;
-	text-transform: lowercase;
-}
-
-.page-footer {
-	margin-top: 1rem;
+    @media (max-width: $breakpoint-sm) {
+    }
 }
