--- a/styles/contact.scss
+++ b/styles/contact.scss
@@ -13,7 +13,7 @@ main {
 
 .contact {
   max-width: 1100px;
-  margin: 0 auto;
+  margin: 32px auto;
   padding: 0 1rem;
 
   @media (max-width: $breakpoint-md) {
@@ -32,5 +32,17 @@ main {
 
   p {
     font-size: 1.15em;
+  }
+  .details {
+    --flow-space: 0.5rem;
+  }
+  .email {
+    margin-top: 1rem;
+  }
+}
+
+body.dark .contact {
+  a {
+    color: #ff75ff;
   }
 }
