--- a/styles/homepage.scss
+++ b/styles/homepage.scss
@@ -5,3 +5,114 @@
   align-items: center;
   flex-direction: column;
 }
+
+@media (max-width: 400px) {
+  .homepage .container,
+  #notes_sec {
+    padding: 15px;
+  }
+}
+
+@media (max-width: 1000px) {
+  .container {
+    max-width: 800px;
+  }
+}
+
+@media (max-width: 620px) {
+  .container {
+    max-width: 480px;
+  }
+  .homepage .container {
+    grid-template-columns: 1fr;
+  }
+  .homepage .container > :last-child {
+    height: 480px;
+  }
+  #notes_sec {
+    grid-template-columns: 1fr;
+  }
+}
+
+.tele-logo > svg {
+  display: inline-block;
+  font-size: 1.4em;
+  margin-left: 5px;
+  vertical-align: middle;
+}
+
+#notes_sec {
+  display: grid;
+  gap: 50px 30px;
+  padding: 30px;
+  grid-template-columns: 1fr 1fr;
+}
+
+#notes_sec > div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  gap: 10px;
+}
+
+.homepage h1 {
+  margin: 0 0 15px;
+}
+
+.homepage p {
+  margin: 0 0 1.5em;
+  font-size: 1.5em;
+}
+
+.tele-logo {
+  padding: 10px 15px;
+  background-color: #005eb6;
+  color: white;
+  font-size: 1.2em;
+  border-radius: 5px;
+}
+
+#notes_sec > div > :nth-child(2) {
+  margin: 15px 0 0;
+}
+
+#notes_sec > div p {
+  font-size: 1.15em;
+}
+
+#notes_sec svg {
+  height: 3em;
+  width: 3em;
+}
+
+.homepage .container > :first-child {
+  text-align: center;
+}
+
+.homepage .container > :last-child {
+  height: 100%;
+  background: url(/assets/mobile_new_medium.webp) center/contain no-repeat;
+}
+
+.homepage .logo {
+  height: 150px;
+  margin-bottom: 10px;
+}
+
+.homepage .container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 30px;
+  padding: 30px;
+  align-items: center;
+  border-bottom: 1px solid var(--stroke-color);
+}
+
+#main_wrapper {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  background-color: var(--bg);
+  color: var(--fg);
+}
