--- a/styles/targeted-articles.scss
+++ b/styles/targeted-articles.scss
@@ -1,206 +1,12 @@
-@import 'global';
+@import "global";
 
 body {
-	background-color: var(--bg);
-	color: var(--fg);
-	display: flex;
-	flex-direction: column;
+  background-color: var(--bg);
+  color: var(--fg);
+  display: flex;
+  flex-direction: column;
 }
 
 main {
-	flex: 1;
+  flex: 1;
 }
-
-
-.page-header{
-	max-width: 1000px; 
-	margin: 0 auto !important; 
-	color: var(--date-color);
-	width: 100%;
-	padding: 0px !important;
-}
-.container {
-	padding: 0px 40px;
-}
-.main{
-	
-	max-width: 850px; 
-	margin: 0 auto !important; 
-	float: none !important; 
-	padding: 0px 40px;
-	color: var(--date-color);
-}
-
-.cont{
-	display: grid;
-	grid-template-columns: 2fr 1fr;
-	gap: 25px;
-	.lef{
-		display: flex;
-		flex-direction: column;
-		gap: 20px;
-		justify-content: space-between;
-		a{
-			h4{
-				font-size: 24px;
-				font-weight: 700;
-	
-			}
-		}
-		a:hover{
-			color:blue;
-		}
-		
-		p{
-			font-size: 14px;
-			font-weight: 400;
-			margin-bottom: 0px;
-		}
-		.pop{
-			display: flex;
-			// justify-content: space-between;
-            gap: 15px;
-			align-items: center;
-			p:nth-child(1){
-				padding: 6px 20px;
-				border-radius: 8px;
-				color: white;
-				background-color: brown;
-			}
-            p:nth-child(2){
-				padding: 6px 20px;
-				border-radius: 8px;
-				color: white;
-				background-color: rgb(10, 96, 244);
-			}
-	}
-}
-.righ{
-	background-image: url('/assets/blogImages/b-image.svg');
-				background-size: cover;
-				margin-top: 47px;
-				min-height: 200px;
-				width: 100%;
-                display: flex;
-                justify-content: center;
-                color: white;
-                align-items: end;
-}
-.hr{
-	// border-top: 1px dashed red;
-	width: 100%;
-}
-}
-hr{
-	// border-top: 1px dashed var(--fg);
-	width: 100%;
-	// margin-top: 20px;
-}
-.cont:nth-child(1){
-	.pop{
-		p:nth-child(1){
-			background-color: rgb(82, 19, 184);
-		}
-	}
-}
-
-.cont:nth-child(3){
-	.pop{
-		p:nth-child(1){
-			background-color: rgb(15, 11, 249);
-		}
-	}
-}
-
-
-
-
-
-
-@media (max-width: $breakpoint-md) {
-	.cont{
-		gap: 10px;
-		.lef{
-			gap: 10px;
-			h4{
-				font-size: 24px;
-
-			}
-			p{
-				font-size: 18px;
-			}
-		}
-		.righ{
-			margin: 40px 0px;
-		}
-
-	}
-}
-
-
-
-
-
-
-@media (max-width: $breakpoint-sm) {
-.container{
-	padding: 0px 20px;
-	max-width: 100% !important;
-}
-.cont{
-	display: flex;
-	gap: 2px !important;
-	flex-direction: column-reverse;
-	.lef{
-		display: flex;
-		flex-direction: column;
-		gap: 1px;
-		margin: 0px !important;
-		a{
-			h4{
-				font-weight: 700;
-				font-size: 16px;
-				margin-top: 15px !important;
-			}
-		}
-		
-		p{
-			font-size: 12px !important;
-			margin-bottom: 0px !important;
-		}
-		.pop{
-			display: flex;
-			justify-content: space-between;
-			align-items: center;
-			p{
-				font-size: 12px;
-			}
-			p:nth-child(1){
-				padding: 3px 6px;
-				color: white;
-				border-radius: 4px;
-			}
-		}
-		
-	}
-	.righ{
-		background-image: url('/assets/blogImages/b-image.svg');
-					background-size: cover;
-					margin: 0px 0px !important;
-					min-height: 200px;
-					width: 100% !important;
-	}
-}
-
-.page-header {
-	.logo {
-		display: none;
-	}
-}
-
-	
-}
-@media (max-width: $breakpoint-xs) {
-
-}
-
