--- a/styles/blog.scss
+++ b/styles/blog.scss
@@ -10,13 +10,19 @@ body {
 .blog-content {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
     padding: 1rem;
+    margin: 0 auto;
 
     .title {
-        align-self: flex-start;
+        font-size: var(--font-size-xxl);
     }
+
+    .subtitle {
+        margin: 0;
+        font-size: var(--font-size-md);
+        margin-bottom: 32px;
+    }
+
     .post {
         display: flex;
         gap: 2rem;
@@ -27,7 +33,7 @@ body {
             gap: 0.5rem;
         }
         .left {
-            max-width: 200px;
+            max-width: 300px;
             @media (max-width: $breakpoint-sm) {
                 max-width: 100%;
             }
@@ -36,20 +42,36 @@ body {
             flex-direction: column;
             img {
                 aspect-ratio: 1/1;
+                object-fit: cover;
+                object-position: bottom;
             }
             @media (max-width: $breakpoint-sm) {
-              img {
-                height: 90%;
-              }
+                img {
+                    height: 90%;
+                }
             }
         }
         .right {
             flex: 1;
+            h2 {
+                max-width: 50ch;
+                font-size: var(--font-size-md);
+            }
+            .snippet {
+                max-width: 40ch;
+                @media (max-width: $breakpoint-sm) {
+                    display: none;
+                }
+            }
             .tags {
                 margin-top: 0.5rem;
                 display: flex;
-                gap: 2px;
+                gap: 4px;
                 flex-wrap: wrap;
+            }
+            .date {
+                color: #666666;
+                font-size: var(--font-size-xs);
             }
         }
         .tag {
