--- a/_includes/blogpost.liquid
+++ b/_includes/blogpost.liquid
@@ -11,10 +11,15 @@
     {% include 'header' %}
     <main>
         <div class="content">
-            <h1>{{title}}</h1>
-            <img src="https://picsum.photos/1000/400" alt="">
-            <!-- <img src="/assets/{{ post.data.imagePath }}" alt=""> -->
-            {{content}}
+            <p class="date">{{ date | date: '%B %e, %Y' }}</p>
+            <h1 class="title">{{title}}</h1>
+            <img src="/assets/{{imagePath }}" alt="">
+            <div class="tags">
+                {% for tag in tags %}
+                <a href="/tags/{{tag}}" class="tag">#{{tag}}</a>
+                {% endfor %}
+            </div>
+            <div class="text">{{content}}</p>
         </div>
     </main>
     <footer class="page-footer">
